# ml-algorithms

./: .gitignore  __main__.py  headbrain.csv  pyproject.toml
supervised/: linear_regression.py  logistic_regression.py
supervised/learning_procedure/: __init__.py  gradient_descent.py  normal_equation.py
supervised/regression/linear-regression/: simple-linear-regression.py  vectors.py
utils/: matrices.py  vectors.py
